# public/swagger.json
@@ -1545,6 +1545,41 @@
 				]
 			}
 		},
+		"/datoCuriosoContenido/{id}": {
+			"get": {
+				"operationId": "GetDatosCuriososByContenido",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CatDatoCurioso"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"CatDatoCurioso"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/contenidoMaterias": {
 			"get": {
 				"operationId": "GetContenidoMaterias",
